soft delete y seeders de prueba con postman (para product)
