# app/Http/Resources/ProductResource.php
@@ -28,6 +28,7 @@ class ProductResource extends JsonResource
             ],
             'created_at' => $this->created_at?->toDateTimeString(),
             'updated_at' => $this->updated_at?->toDateTimeString(),
+            'deleted_at' => $this->deleted_at?->toDateTimeString(),
         ];
     }
 }
